# ros2-swarm-pipeline

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
.github/actions/colcon-build/: action.yml
.github/actions/docker-build/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  colcon-build.yml  docker-build.yml  etl-pipeline.yml  lint.yml
cicd/: Dockerfile  entrypoint.sh  requirements.txt
etl_pipeline/: analyze_flight.py  mcap_to_parquet.py  requirements.txt  validate_analytics.py  validate_parquet.py
etl_pipeline/queries/: __init__.py  flight_queries.py
ros2_nodes/: drone_telemetry_sub.py
ros2_nodes/drone_bridge/: CMakeLists.txt  package.xml
ros2_nodes/drone_bridge/src/: drone_bridge_node.cpp
ros2_nodes/drone_telemetry/: package.xml  setup.py
ros2_nodes/drone_telemetry/drone_telemetry/: bag_recorder.py  drone_telemetry_pub.py  waypoint_planner.py
ros2_nodes/drone_telemetry/drone_telemetry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ros2_nodes/drone_telemetry/drone_telemetry/bag/: __init__.py  recorder.py
ros2_nodes/drone_telemetry/drone_telemetry/navigation/: __init__.py  waypoint_planner.py
ros2_nodes/drone_telemetry/drone_telemetry/telemetry/: __init__.py  subscriber.py
