<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_bridge</name>
  <version>0.1.0</version>
  <description>
    C++ bridge node for the ROS 2 Swarm Pipeline.
    Subscribes to /drone/odometry (published by the Python telemetry_pub)
    and demonstrates cross-language DDS communication (Python pub -> C++ sub).
  </description>
  <maintainer email="edsoncarlosdevops@gmail.com">Edson Carlos</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
